[tool.poetry]
name = "sentiric-llm-streaming-service"
version = "0.1.0"
description = "Expert LLM Streaming Engine for real-time, low-latency text output."
authors = ["Sentiric Team"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.3"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
grpcio = "^1.64.1"
# Stream için SSE/WebSocket/Aiohttp kullanırız
httpx = "^0.27.0" 

# Protobuf stubs
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.9.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"